# Super-Memory

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  TASKS.md  main.py  memory_backup.json  migrate_to_minilm.py  pyproject.toml
.github/workflows/: ci.yml  release.yml
memory_data_old_corrupted/memories.lance/_transactions/: 0-a61ad4f7-a20e-4086-9407-4192a495ecbf.txn  10-982762bb-6265-4d9c-bfdd-5d8ade327296.txn  11-ad540731-1272-41af-b31c-53e2c87e0c7b.txn  12-5fb0367f-a6d4-486b-97b4-81d1a56b1647.txn  13-643957a3-9cf3-459f-a730-43a113699409.txn  14-928d08dc-5978-42f6-b38c-f27d69fdd1b6.txn  15-9211f8c6-505e-44be-b1f2-1bef4784ad09.txn  15-d145184d-d538-4920-91fd-84e194e9ec21.txn  17-af8e48d7-b391-45a9-b967-17fcee20ff5d.txn  18-5759d2fa-df32-4aa7-8bde-df25c507a9f7.txn  19-888cf3d5-b4fa-4bc4-8124-cdfee371e4af.txn  20-26db76d3-ae65-413b-8538-5918f35eccd0.txn  21-37d40671-bfb4-4f59-ae64-ed513bff4277.txn  22-05f7d2a4-886f-4863-9a24-b7ff57cf66d3.txn  7-71b7421a-339c-4928-a806-2d0ba53c7423.txn  8-659055c0-1a05-471d-a50a-3c090dbb88c9.txn  9-5a202fdc-e1ff-49b9-925c-6db0172cacb3.txn
mensa_memory.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
scripts/: migrate_db.py
src/super_memory/: __init__.py  __main__.py  config.py  mcp_tools.py  memory.py  migrate.py  schema.py
tests/: conftest.py  test_config.py  test_exceptions.py  test_mcp_tools.py  test_mcp_tools_errors.py  test_memory.py  test_memory_batch.py  test_memory_error_paths.py  test_schema_migration.py
