[project]
name = "mensa-memory"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "lancedb",
    "torch",
    "sentence-transformers",
    "fastmcp",
    "markitdown>=0.1.5",
    "onnxruntime-gpu>=1.24.2",
]

[project.scripts]
mensa-memory = "main:main"

[[tool.uv.index]]
url = "https://download.pytorch.org/whl/cu12"
